--- a/styles/sass/partials/blog__page/_comments.scss
+++ b/styles/sass/partials/blog__page/_comments.scss
@@ -30,8 +30,16 @@
         @include flexIt(column, flex-start, stretch)
     }
 
-    img {
-            margin-right: 50px ;
+    //Profile picture of commenter.
+    &__image {
+        max-width: 70px;
+        max-height: 70px;
+        margin-right: 50px ;
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
     }
 
     //name of commenter.
