--- a/styles/style.css
+++ b/styles/style.css
@@ -1735,8 +1735,14 @@ a {
             align-items: stretch;
   }
 }
-.comment img {
+.comment__image {
+  max-width: 70px;
+  max-height: 70px;
   margin-right: 50px;
+}
+.comment__image img {
+  width: 100%;
+  height: 100%;
 }
 .comment__name {
   text-transform: uppercase;
