--- a/styles/sass/components/_navigation.scss
+++ b/styles/sass/components/_navigation.scss
@@ -109,6 +109,7 @@
     padding: 100px 0;
     position: fixed;
     width: 100%;
+    height: 100%;
     z-index: 1;
 
     @media (min-width: 900px) {
