--- a/styles/sass/partials/blog__page/_comments.scss
+++ b/styles/sass/partials/blog__page/_comments.scss
@@ -32,8 +32,8 @@
 
     //Profile picture of commenter.
     &__image {
-        max-width: 70px;
-        max-height: 70px;
+        width: 70px;
+        height: 70px;
         margin-right: 50px ;
 
         img {
