--- a/styles/sass/components/_navigation.scss
+++ b/styles/sass/components/_navigation.scss
@@ -123,21 +123,38 @@
     }
 }
 
-
-.navigation__contact {
-    background: $white;
-    position: fixed;
-    z-index: 2;
+//Mobile specific hover animation. 
+.navigation__item--mobile {
+    position: relative;
+    
+    &:hover::after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        background: $black;
+        bottom: -10px;
+        left: 0;
+        animation: grow 0.5s forwards;
+    }
 }
 
+//Class that sets background color on nav on scroll. 
 .navigation__color {
     background: $white;
 }
 
-.fa-times {
-    font-size: 3rem;
+//FA close nav icon. 
+.fa-times, 
+.fa-bars {
+    transition: font-size 0.3s ease-in-out;
+
+    &:hover {
+        font-size: 2.5rem;
+    }
 }
 
+//Class that will hide the nav in JS. 
 .hideNav {
     display: none;
 }
