--- a/styles/style.css
+++ b/styles/style.css
@@ -446,18 +446,33 @@ a {
           align-items: center;
 }
 
-.navigation__contact {
-  background: #FFF;
-  position: fixed;
-  z-index: 2;
+.navigation__item--mobile {
+  position: relative;
+}
+.navigation__item--mobile:hover::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background: #333;
+  bottom: -10px;
+  left: 0;
+  -webkit-animation: grow 0.5s forwards;
+          animation: grow 0.5s forwards;
 }
 
 .navigation__color {
   background: #FFF;
 }
 
-.fa-times {
-  font-size: 3rem;
+.fa-times,
+.fa-bars {
+  -webkit-transition: font-size 0.3s ease-in-out;
+  transition: font-size 0.3s ease-in-out;
+}
+.fa-times:hover,
+.fa-bars:hover {
+  font-size: 2.5rem;
 }
 
 .hideNav {
